workloads/11_airflow-dev/ingress-airflow-alb.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: airflow-dev
  name: ingress-airflow-dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance # ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:004625312447:certificate/7931dcd8-db0d-4595-88df-51f3d57819aa
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: airflow-dev-webserver
      port: 
        name: airflow-ui
      #  number: 8080
  tls:
  - hosts:
    - airflow.topk8s.com
    secretName: airflow-prod-secret
  rules:
    - host: airflow.topk8s.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: airflow-dev-webserver
              port:
                name: airflow-ui
              #  number: 8080
---
